# agentic-rag-platform

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/corpus/: langgraph.md  mcp.md  retrieval.md
docs/: DESIGN.md
scripts/: evaluate.py  ingest.py
src/agentic_rag/: __init__.py  config.py
src/agentic_rag/agents/: __init__.py  graph.py  nodes.py  prompts.py
src/agentic_rag/api/: __init__.py  dependencies.py  main.py  routes.py
src/agentic_rag/core/: __init__.py  exceptions.py  logging.py  types.py
src/agentic_rag/evaluation/: __init__.py  dataset.py  metrics.py  runner.py
src/agentic_rag/guardrails/: __init__.py  input_guard.py  output_guard.py
src/agentic_rag/ingestion/: __init__.py  loaders.py  pipeline.py  preprocessor.py
src/agentic_rag/llm/: __init__.py  base.py  factory.py
src/agentic_rag/llm/providers/: anthropic_provider.py  openai_provider.py
src/agentic_rag/models/: __init__.py  documents.py  queries.py  state.py
src/agentic_rag/observability/: __init__.py  metrics.py  tracer.py
src/agentic_rag/retrieval/: __init__.py  base.py  bm25_retriever.py  chunking.py  hybrid.py  reranker.py  vector_store.py
src/agentic_rag/tools/: __init__.py  base.py  calculator.py  web_search.py
src/mcp_server/: __init__.py  server.py
tests/: conftest.py
tests/eval/: sample_dataset.json
tests/integration/: test_graph_nodes.py
tests/unit/: test_bm25.py  test_calculator.py  test_chunking.py  test_guardrails.py  test_hybrid.py  test_metrics.py
ui/: streamlit_app.py
