[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag-platform"
version = "0.1.0"
description = "Production-grade Agentic RAG platform with LangGraph, hybrid retrieval, reflection, guardrails, evaluation and MCP integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kaustubh Salunke", email = "kaustubh.v.salunke@gmail.com" }]
license = { text = "MIT" }
keywords = ["llm", "rag", "agents", "langgraph", "mcp", "ai-engineer"]

dependencies = [
    # Core
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "loguru>=0.7",

    # LLM / Agents
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "openai>=1.30",
    "anthropic>=0.30",
    "tiktoken>=0.7",

    # Retrieval
    "chromadb>=0.5",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",

    # Ingestion
    "pypdf>=4.2",
    "beautifulsoup4>=4.12",
    "markdown>=3.6",

    # API / Serving
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "httpx>=0.27",

    # Tools
    "tavily-python>=0.3",
    "duckduckgo-search>=5.3",

    # MCP
    "mcp>=0.9",

    # Observability / Evaluation
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",

    # UI
    "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipython>=8.25",
]

[project.scripts]
agentic-rag-api = "agentic_rag.api.main:run"
agentic-rag-ingest = "scripts.ingest:main"
agentic-rag-eval = "scripts.evaluate:main"
agentic-rag-mcp = "mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "W", "C90"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --cov=agentic_rag --cov-report=term-missing"
